--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -21,13 +21,11 @@
     </ul>
 </div>
 
-<div th:fragment="footer">
-    <footer>
-        <p class="text-center text text-muted">
-        Copyright Tactische Tanuki (Jantine van der Schaaf &amp; Josse Muller) &copy;2025
-        </p>
-    </footer>
-</div>
+<footer th:fragment="footer" class="page-footer">
+    <p class="text-center text text-muted">
+    Copyright Tactische Tanuki (Jantine van der Schaaf &amp; Josse Muller) &copy;2025
+    </p>
+</footer>
 
 <div th:fragment="bottomScripts">
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
