--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="~{fragments/general :: baseheader(~{:: title})}">
-    <title>List of recipes</title>
-</head>
+    <title>List of recipes</title></head>
 
 <body>
 
-<div th:replace="~{fragments/general :: navbar}"></div>
+<div class="page-wrapper">
+    <nav th:replace="~{fragments/general :: navbar}"></nav>
 
-<div class="container">
+    <main class="page-main">
+        <h1>List of all recipes</h1>
+        <!-- TODO: Add recipe list -->
+    </main>
 
+    <footer th:replace="~{fragments/general :: footer}"></footer>
+    <div th:replace="~{fragments/general :: bottomScripts}"></div>
 </div>
-<h1>List of all recipes</h1>
-<!-- TODO: Add recipe list -->
-<div th:replace="~{fragments/general :: footer}"></div>
-<div th:replace="~{fragments/general :: bottomScripts}"></div>
 
 </body>
 </html>
