--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,8 +33,9 @@ body {
     margin-top: .5rem;
     margin-bottom: .5rem;
 }
-.page-body {
+.page-main {
     padding: 20px;
+    width: 100%;
 }
 .bottom-scripts {
     display: none;
