--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="~{fragments/general :: baseheader(~{:: title})}">
-    <title>List of recipes</title></head>
-
+    <title>List of recipes</title>
+</head>
 <body>
 
 <div class="page-wrapper">
     <nav th:replace="~{fragments/general :: navbar}"></nav>
 
-    <main class="page-main">
-        <h1>List of all recipes</h1>
-        <div th:replace="~{fragments/recipe :: recipeList(${recipes})}"></div>
-        <a class="btn btn-primary" th:href="@{/recipe/add}">Add recipe</a>
+    <main class="page-main container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+                <h1>List of all recipes</h1>
+                <div th:replace="~{fragments/recipe :: recipeList(${recipes})}"></div>
+                <br />
+                <br />
+                <a class="btn btn-primary" th:href="@{/recipe/add}">Add recipe</a>
+            </div>
+        </div>
     </main>
 
     <footer th:replace="~{fragments/general :: footer}"></footer>
