add layout detail page

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<nav th:fragment="navbar" class="page-navbar">
+<nav th:fragment="navbar" class="sticky-top page-navbar navbar-light bg-light">
     <ul class="nav justify-content-center">
         <li class="nav-item">
             <a class="nav-link" th:href="@{/recipe/all}">Recipes</a>
@@ -21,8 +21,8 @@
     </ul>
 </nav>
 
-<footer th:fragment="footer" class="page-footer">
-    <p class="text-center text text-muted">
+<footer th:fragment="footer" class="page-footer w-100 py-3">
+    <p class="text-center text-muted">
     Copyright Tactische Tanuki (Jantine van der Schaaf &amp; Josse Muller) &copy;2025
     </p>
 </footer>
