--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
             <a class="nav-link" th:href="@{/recipe/all}">Recipes</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/category/all}">Categories</a>
+        </li>
     </ul>
 </nav>
 
