--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="~{fragments/general :: baseheader(~{:: title})}">
-    <title>Replace this title</title>
+    <title>Categories</title>
 </head>
 
 <body>
 <div class="page-wrapper">
     <nav th:replace="~{fragments/general :: navbar}"></nav>
 
-    <main class="page-main">
-        <ul>
-            <li th:each="category : ${categories}">
-                <a
-                        th:text="${category.name}"
-                        th:href="@{/category/{categoryId}/recipes(categoryId=${category.categoryId})}"
-                /> (<span th:text="${category.getRecipes().size()}" /> recipes)
-            </li>
-        </ul>
+    <main class="page-main container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+                <h1>Recipe categories</h1>
+                <div th:replace="~{fragments/category :: categoryList(${categories})}"></div>
+                <br />
+                <br />
+                <a class="btn btn-primary" th:href="@{/category/add}">Add category</a>
+            </div>
+        </div>
     </main>
 
     <footer th:replace="~{fragments/general :: footer}"></footer>
