Rework recipe card and add categories

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,3 +39,8 @@ body {
 .bottom-scripts {
     display: none;
 }
+
+.link-card:hover {
+    border-color: var(--main-color);
+    transition: border-color 0.5s ease;
+}
