--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -15,8 +15,17 @@
             </div>
 
             <main class="col-md-8 col-lg-8 py-4">
-                <h1 class="text-center" th:text="${recipe.name}"></h1>
-                <p class="lead mt-5" th:text="${recipe.description}"></p>
+                <h1 class="text-center">
+                    <span th:text="${recipe.name}" />
+                </h1>
+                <h4 th:if="${recipe.categories.size() > 0}">
+                    Categories:
+                    <a th:each="category : *{recipe.categories}"
+                       class="nav-link active badge bg-danger rounded-pill text-decoration-none me-2"
+                       th:href="@{/category/{categoryId}/recipes(categoryId=${category.categoryId})}"
+                       th:text="${category.name}"/>
+                </h4>
+                <p class="lead mt-3" th:text="${recipe.description}"></p>
                 <div class="container overflow-hidden">
                     <div class="row g-2">
                         <div class="col-6">
