Re-sytle navbar and show active page

--- a/src/main/resources/templates/categoryRecipes.html
+++ b/src/main/resources/templates/categoryRecipes.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="page-wrapper">
-    <nav th:replace="~{fragments/general :: navbar}"></nav>
+    <nav th:replace="~{fragments/general :: navbar(${navItems}, '')}"></nav>
 
     <main class="page-main container">
         <div class="row justify-content-center">
