--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -6,7 +6,7 @@
 
 <body>
 <div class="page-wrapper">
-    <nav th:replace="~{fragments/general :: navbar}"></nav>
+    <nav th:replace="~{fragments/general :: navbar(${navItems}, 'Categories')}"></nav>
 
     <main class="page-main container">
         <div class="row justify-content-center">
