--- a/src/main/resources/templates/fragments/example.html
+++ b/src/main/resources/templates/fragments/example.html
@@ -6,7 +6,7 @@
 
 <body>
 <div class="page-wrapper">
-    <nav th:replace="~{fragments/general :: navbar}"></nav>
+    <nav th:replace="~{fragments/general :: navbar(${navItems}, 'Active nav item name')}"></nav>
 
     <main class="page-main">
 
