--- a/src/main/resources/templates/fragments/category.html
+++ b/src/main/resources/templates/fragments/category.html
@@ -5,15 +5,15 @@
 
 <!--@thymesVar id="category" type="nl.miwnn.ch17.tactischetanuki.koala_kitchen_creations.model.Category"-->
 <div th:fragment="categoryCard(category)" th:object="${category}" class="col" style="width: 18rem;">
-    <div class="card h-100">
-        <div class="card-body">
+    <div class="card h-100 link-card">
+        <a class="stretched-link" th:href="@{/category/{categoryId}/recipes(categoryId=*{categoryId})}" ></a>
+        <div class="card-header">
             <h5 class="card-title" th:text="*{name}">Category title</h5>
+        </div>
+        <div class="card-body">
             <p class="card-text">
                 <span th:text="*{recipes.size()}" /> recipe<span th:if="*{recipes.size() != 1}">s</span>
             </p>
-            <a th:href="@{/category/{categoryId}/recipes(categoryId=*{categoryId})}"  class="btn btn-primary stretched-link">
-                View recipes
-            </a>
         </div>
     </div>
 </div>
