--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -16,6 +16,7 @@
 <!--/*@thymesVar id="navItems" type="java.util.List<nl.miwnn.ch17.tactischetanuki.koala_kitchen_creations.model.NavItem>"*/-->
 <nav th:fragment="navbar(navItems, activeItem)" class="sticky-top navbar-expand-lg navbar navbar-light bg-light justify-content-center">
     <ul class="navbar-nav mr-auto">
+        <img src="/images/koalaKitchenCreations.png" alt="Logo" style="max-height:50px">
         <li class="nav-item" th:each="navItem : ${navItems}">
             <a class="nav-link" th:classappend="${activeItem == navItem.name} ? 'active'"
                th:href="@{${navItem.href}}" th:text="${navItem.name}"></a>
