--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -13,7 +13,7 @@
     <main class="page-main container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
-                <form method="post" th:action="@{/recipe/save}" th:object="${formRecipe}">
+                    <form method="post" id="recipeForm" th:action="@{/recipe/save}" th:object="${formRecipe}">
                         <input type="hidden" th:field="*{recipeId}" />
                         <input type="hidden" name="ingredientCount" th:value="*{recipeIngredients.size()}" />
                         <div class="mb-3">
@@ -21,13 +21,20 @@
                             <input type="text" class="form-control" id="recipeName" th:field="*{name}">
                         </div>
                         <div class="mb-3">
-                            <label for="authors" class="form-label">Categories</label>
-                            <select class="form-select" id="authors" th:field="*{categories}" multiple>
-                                <option th:each="category : ${availableCategories}"
-                                        th:text="${category.name}"
-                                        th:value="${category.categoryId}">
-                                </option>
+                            <label for="categories" class="form-label">Categories</label>
+                            <select id="categories" name="categories" class="form-select category-select"
+                                    data-searchable="true"
+                                    data-creatable="false"
+                                    data-creatable-text="Add &lt;b&gt;{value}&lt;/b&gt;..."
+                                    multiple>
+                                <option th:each="optionCategory : ${availableCategories}"
+                                        th:text="${optionCategory.name}"
+                                        th:value="${optionCategory.categoryId}"
+                                        th:selected="${formRecipe.categories.contains(optionCategory)}"/>
                             </select>
+                            <script>
+                                const categoriesSelect = new UseBootstrapSelect(document.getElementById('categories'));
+                            </script>
                         </div>
                         <div class="mb-3">
                             <label for="recipeDescription" class="form-label">Description</label>
